# worktrace

./: CHANGELOG.md  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-capture.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/resources/ai/: README.md
src-tauri/resources/voice/: README.md
src-tauri/src/: lib.rs
src-tauri/src/application/: activity.rs  activity_group_narrative.rs  activity_groups.rs  app_updates.rs  calendar.rs  daily_plan.rs  embeddings.rs  focus_sessions.rs  friction.rs  git_sync.rs  github.rs  manual_log_attachments.rs  manual_logs.rs  mod.rs  nudges.rs  priority_reminders.rs  projects.rs  report_ai.rs  reports.rs  repositories.rs  settings.rs  sparc_force.rs  task_attachments.rs  weekly_tasks.rs  workspaces.rs
src-tauri/src/domain/: activity.rs  activity_group.rs  calendar.rs  commit.rs  daily_plan.rs  dashboard.rs  embedding.rs  focus_session.rs  friction.rs  git_metadata.rs  github.rs  manual_log.rs  manual_log_attachment.rs  mod.rs  nudge.rs  priority_reminder.rs  project.rs  report.rs  settings.rs  sparc_force.rs  task_attachment.rs  weekly_task.rs  workspace.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/database/: migrations.rs  mod.rs  repositories.rs  schema.rs
src-tauri/src/infrastructure/filesystem/: mod.rs  repo_paths.rs  workspace_scanner.rs
src-tauri/src/infrastructure/git/: branches.rs  mod.rs  parser.rs  runner.rs  scanner.rs
src-tauri/src/interface/commands/: mod.rs  (+25 more)
(+168 files in other folders)
