[package]
name = "worktrace"
version = "0.1.1"
description = "Local-first developer weekly work tracker"
authors = ["Joseph Mojoo"]
repository = "https://github.com/josephmowjew/worktrace"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
keyring = { version = "3", features = ["windows-native"] }
tempfile = "3"
futures-util = "0.3"
fastembed = "5.14.0"
